classes were refactored

--- a/app/components/product-detail/product-detail.html
+++ b/app/components/product-detail/product-detail.html
@@ -1,13 +1,15 @@
 <div class="thumbnail">
   <img src="http://placehold.it/820x320">
-  <div>
-    <h4 class="pull-right">{{ product.price }}</h4>
-    <h4>{{ product.title }}</h4>
-    <p>{{ product.description }}</p>
-  </div>
-  <div class="ratings">
-    <p class="pull-right">{{ reviews.length }} reviews</p>
-    <p><auction-stars [rating]="product.rating"></auction-stars></p>
+  <div class="description-container">
+    <div>
+      <h4 class="pull-right">{{ product.price }}</h4>
+      <h4>{{ product.title }}</h4>
+      <p>{{ product.description }}</p>
+    </div>
+    <div class="ratings">
+      <p class="pull-right">{{ reviews.length }} reviews</p>
+      <p><auction-stars [rating]="product.rating"></auction-stars></p>
+    </div>
   </div>
 </div>
 <div class="well" id="reviews-anchor">
