--- a/app/components/home/home.html
+++ b/app/components/home/home.html
@@ -4,7 +4,17 @@
   </div>
 </div>
 <div class="row">
-  <div *ngFor="let product of products" class="col-sm-4 col-lg-4 col-md-4">
+  <div class="col-md-12">
+    <div class="form-group">
+      <input placeholder="Filter products by title"
+             class="form-control" type="text"
+             name="sortInput"
+             [formControl]="titleFilter">
+    </div>
+  </div>
+</div>
+<div class="row">
+  <div *ngFor="let product of products | filter:'title':filterCriteria" class="col-sm-4 col-lg-4 col-md-4">
     <auction-product-item [product]="product"></auction-product-item>
   </div>
 </div>
